# lemmy-util-bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  db.json  get_filestack_handles.py  main.py  paused.py  pyproject.toml
.github/workflows/: cicd.yaml  test.yaml
mirror_bot/: auth.py  mirror.py
src/: auth.py  auto_mod.py  helper.py  mirror.py  mod_comment_new_threads.md
tests/: items.py  test_auth.py  test_auto_mod.py  test_db.json  test_helper.py  test_mirror.py
