[tool.poetry]
name = "reddit-lemmy-mirror-bot"
version = "0.1.0"
description = ""
authors = ["i-be-snek <sjzahra@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12" 
requests = "^2.31.0"
praw = "^7.7.1"
pythorhead = ">=0.15"
python-dotenv = "^1.0.0"
tinydb = "^4.8.0"
pytest = "^7.4.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
black = "^23.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
