[tool.poetry]
name = "reddit-lemmy-mirror-bot"
version = "0.1.0"
description = ""
authors = ["i-be-snek <sjzahra@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12" 
requests = "^2.31.0"
praw = "^7.7.1"
pythorhead = ">=0.15"
python-dotenv = "^1.0.0"
tinydb = "^4.8.0"
schedule = "^1.2.1"
filestack-python = "^3.5.0"
pytz = "^2023.3.post1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
black = "^23.9.1"
isort = "^5.12.0"
autoflake = "^2.2.1"

[tool.poetry.group.test.dependencies]
pytest-cov = "^4.1.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
